@@ -1,6 +1,8 @@
 Revision history for Dist-Zilla-Plugin-StaticInstall
 
 {{$NEXT}}
+          - avoids autovivifying prereqs and other metadata while inspecting
+            it (fixes empty {prereqs}{build}{requires} showing up in META.*)
 
 0.007     2015-07-21 02:40:27Z
           - fix test failure with slightly less old CPAN::Meta::Merge
